# SP42

./: .gitignore  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  Trunk.toml  deny.toml  index.html  rust-toolchain.toml
crates/sp42-app/: Cargo.toml  Trunk.toml  build.rs  index.html
crates/sp42-app/src/: app.rs  inspector.rs  lib.rs  main.rs  theme.rs
crates/sp42-app/src/components/: action_bar.rs  action_history_panel.rs  context_header.rs  context_sidebar.rs  debug_panel.rs  diff_viewer.rs  entity_diff_viewer.rs  filter_bar.rs  inspector_feed.rs  media_diff_gallery.rs  mod.rs  patrol_scenario_panel.rs  patrol_session_digest_panel.rs  patrol_session_rail.rs  queue_column.rs  rendered_highlight.rs  rendered_hunk_preview.rs  shell_section.rs  shell_state_panel.rs  status_badge.rs  style.rs  telemetry_lines.rs  telemetry_panel.rs
crates/sp42-app/src/pages/: article.rs  citation.rs  dashboard.rs  mod.rs  patrol.rs
crates/sp42-app/src/pages/patrol/: action_controller.rs  eventstream_controller.rs  keyboard_controller.rs  load_controller.rs  queue_controller.rs  revision_artifacts.rs  view_components.rs
crates/sp42-app/src/platform/: article.rs  auth.rs  bootstrap.rs  citation.rs  config.rs  console.rs  coordination.rs  debug.rs  eventstream.rs  globals.rs  http.rs  live.rs  mod.rs  pwa.rs  runtime.rs
crates/sp42-app/static/: manifest.json  offline.html  style.css  sw.js
crates/sp42-citation/: Cargo.toml
crates/sp42-citation/src/: bare_url_repair.rs  citation.rs  citation_finding.rs  citation_page_report.rs  evidence_link.rs  lib.rs
crates/sp42-citation/src/citation/: body_classifier.rs  enrich.rs  extract.rs  openlibrary.rs  openlibrary_apply.rs  page.rs  prompts.rs  search_inside.rs  storage.rs  urls.rs  verify.rs  voting.rs
crates/sp42-cli/: Cargo.toml
crates/sp42-cli/src/: main.rs
crates/sp42-coordination/: Cargo.toml
crates/sp42-coordination/src/: client.rs  codec.rs  errors.rs  lib.rs  messages.rs  runtime.rs  state.rs
crates/sp42-core/: Cargo.toml
crates/sp42-core/src/: action_contracts.rs  action_executor.rs  article_inventory.rs  backlog_runtime.rs  bare_url_repair.rs  branding.rs  citation.rs  config_parser.rs  context_builder.rs  coordination_client.rs  coordination_codec.rs  coordination_runtime.rs  coordination_state.rs  debug_snapshot.rs  dev_auth.rs  dev_preview.rs  diff_engine.rs  errors.rs  lib.rs  liftwing.rs  live_operator.rs  media_diff.rs  operator_summary.rs  patrol_scenario_report.rs  patrol_session_digest.rs  priority_queue.rs  public_documents.rs  queue_builder.rs  recent_changes.rs  report_document.rs  review_workbench.rs  routes.rs  scoring_engine.rs  scoring_policy.rs  shell_state.rs  stream_ingestor.rs  stream_runtime.rs  test_fixtures.rs  training_data.rs  traits.rs  (+3 more)
crates/sp42-core/src/citation/: body_classifier.rs  citoid.rs  concurrency.rs  extract.rs  locate_quote.rs  page.rs  parsing.rs  prompts.rs  segment.rs  source_fetch.rs  storage.rs  urls.rs  verdict.rs  verify.rs
crates/sp42-desktop/: Cargo.toml  tauri.conf.json
crates/sp42-desktop/scripts/: prepare-tauri-build.sh
crates/sp42-desktop/src/: main.rs
crates/sp42-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/sp42-desktop/src-tauri/capabilities/: default.json
crates/sp42-desktop/src-tauri/icons/: icon.icns
crates/sp42-desktop/src-tauri/src/: desktop.rs  main.rs  shell.rs
crates/sp42-devtools/: Cargo.toml
crates/sp42-devtools/src/: lib.rs  preview.rs  surface.rs
crates/sp42-fetch/: Cargo.toml
crates/sp42-fetch/src/: client.rs  lib.rs  resolver.rs
crates/sp42-live/: Cargo.toml
crates/sp42-live/src/: backlog_runtime.rs  lib.rs  live_operator.rs  recent_changes.rs  stream_ingestor.rs  stream_runtime.rs
crates/sp42-mcp/: Cargo.toml
crates/sp42-mcp/src/: http.rs  lib.rs  main.rs  page.rs  probe.rs  server.rs  verify.rs  wikidata.rs
crates/sp42-parsoid/: Cargo.toml
crates/sp42-parsoid/src/: lib.rs
crates/sp42-parsoid/tests/fixtures/: parsoid_harvsp_frwiki.html  parsoid_magiclink_dewiki.html  parsoid_sfn_enwiki.html
crates/sp42-patrol/: Cargo.toml
crates/sp42-patrol/src/: lib.rs  live_operator_view.rs  operator_summary.rs  patrol_scenario_report.rs  patrol_session_digest.rs  scoring_evaluation.rs  shell_state.rs
crates/sp42-platform/: Cargo.toml
crates/sp42-platform/src/: action_contracts.rs  action_executor.rs  article_inventory.rs  context_builder.rs  dev_auth.rs  errors.rs  lib.rs  liftwing.rs  media_diff.rs  oauth.rs  origin.rs  queue_builder.rs  review_session.rs  review_workbench.rs  routes.rs  score_tier.rs  scoring_engine.rs  scoring_policy.rs  test_fixtures.rs  types.rs  user_analyzer.rs  wiki_storage.rs  wikibase.rs  wikitext_editor.rs
crates/sp42-platform/src/wikibase/: capability.rs  diff.rs  mod.rs  model.rs  parse.rs  proposal.rs  read.rs  render.rs  select.rs
crates/sp42-reporting/: Cargo.toml
crates/sp42-reporting/src/: citation_finding.rs  citation_page_report.rs  debug_snapshot.rs  lib.rs  live_operator_view.rs  operator_summary.rs  patrol_scenario_report.rs  patrol_session_digest.rs  server_debug_summary.rs  shell_state.rs
crates/sp42-server/: Cargo.toml
crates/sp42-server/src/: action_routes.rs  auth_routes.rs  citation_routes.rs  coordination.rs  deployment.rs  endpoint_manifest.rs  http_errors.rs  ingestion_supervisor.rs  live_queue.rs  local_env.rs  main.rs  oauth_runtime.rs  operator_live.rs  parsoid_editor.rs  review_routes.rs  revision_artifacts.rs  routes.rs  runtime_adapters.rs  runtime_status.rs  session_runtime.rs  state.rs  static_assets.rs  storage_routes.rs  tests.rs  wiki_registry.rs  wikimedia_capabilities.rs
crates/sp42-server/tests/: operator_live.rs
crates/sp42-server/tests/fixtures/: parsoid_cats.html
crates/sp42-types/: Cargo.toml
crates/sp42-types/src/: errors.rs  lib.rs  model.rs  traits.rs  transport.rs
crates/sp42-wiki/: Cargo.toml
crates/sp42-wiki/data/: wikimedia-sites.json
crates/sp42-wiki/src/: capabilities.rs  config.rs  errors.rs  lib.rs  registry.rs  sites.rs  test_fixtures.rs
(+275 files in other folders)
