[workspace]
members = [
    "crates/sp42-app",
    "crates/sp42-cli",
    "crates/sp42-core",
    "crates/sp42-desktop",
    "crates/sp42-server",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["ws"] }
base64 = "0.22.1"
futures = "0.3.31"
gloo-net = "0.6.0"
js-sys = "0.3.82"
leptos = { version = "0.8.14", default-features = false, features = ["csr"] }
rand = "0.9.2"
rmp-serde = "1.3.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
similar = "2.7.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = { version = "2.5.7", features = ["serde"] }
web-sys = { version = "0.3.82", features = ["BinaryType", "CloseEvent", "Crypto", "Document", "Element", "Event", "EventSource", "HtmlHeadElement", "Location", "MessageEvent", "Navigator", "Node", "RequestCredentials", "ServiceWorker", "ServiceWorkerContainer", "ServiceWorkerRegistration", "Storage", "WebSocket", "Window"] }

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
pedantic = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
