[package]
name = "sp42-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait.workspace = true
base64.workspace = true
futures.workspace = true
gloo-net.workspace = true
js-sys.workspace = true
leptos.workspace = true
serde_json.workspace = true
send_wrapper.workspace = true
sp42-coordination = { path = "../sp42-coordination" }
sp42-core = { path = "../sp42-core" }
sp42-live = { path = "../sp42-live" }
sp42-citation = { path = "../sp42-citation" }
sp42-patrol = { path = "../sp42-patrol" }
sp42-reporting = { path = "../sp42-reporting" }
sp42-types = { path = "../sp42-types" }
url.workspace = true
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys.workspace = true

[dev-dependencies]
sp42-wiki = { path = "../sp42-wiki" }
