[package]
name = "sp42-citation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
futures.workspace = true
percent-encoding.workspace = true
regex = "1.12"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
unicode-normalization = "0.1"
url.workspace = true
sp42-platform = { path = "../sp42-platform" }
sp42-reporting = { path = "../sp42-reporting" }
sp42-types = { path = "../sp42-types" }

[dev-dependencies]
async-trait.workspace = true
proptest = "1.9.0"
