[package]
name = "sp42-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sp42-core = { path = "../sp42-core" }
