[package]
name = "sp42-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sp42-core = { path = "../sp42-core" }
sp42-devtools = { path = "../sp42-devtools" }
sp42-inference = { path = "../sp42-inference" }
sp42-citation = { path = "../sp42-citation" }
sp42-patrol = { path = "../sp42-patrol" }
sp42-reporting = { path = "../sp42-reporting" }
sp42-types = { path = "../sp42-types" }
tokio.workspace = true

[dev-dependencies]
url.workspace = true
