[package]
name = "sp42-coordination"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
rmp-serde.workspace = true
serde.workspace = true
sp42-platform = { path = "../sp42-platform" }
sp42-types = { path = "../sp42-types" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
futures.workspace = true
proptest = "1.9.0"
