[package]
name = "sp42-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
regex = "1.12"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
similar.workspace = true
sp42-types = { path = "../sp42-types" }
thiserror.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
futures.workspace = true
proptest = "1.9.0"
