[package]
name = "sp42-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
futures.workspace = true
serde_json.workspace = true
sp42-core = { path = "../sp42-core" }
sp42-devtools = { path = "../sp42-devtools" }
sp42-reporting = { path = "../sp42-reporting" }
url.workspace = true
