[package]
name = "sp42-devtools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
sp42-coordination = { path = "../sp42-coordination" }
sp42-core = { path = "../sp42-core" }
sp42-reporting = { path = "../sp42-reporting" }
thiserror.workspace = true

[dev-dependencies]
futures.workspace = true
