[package]
name = "sp42-fetch"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
ip_network.workspace = true
rand.workspace = true
reqwest.workspace = true
sp42-types = { path = "../sp42-types" }
tokio.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
