[package]
name = "sp42-live"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sp42-core = { path = "../sp42-core" }

[dev-dependencies]
async-trait.workspace = true
futures.workspace = true
proptest = "1.9.0"
