[package]
name = "sp42-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
sp42-core = { path = "../sp42-core" }
sp42-types = { path = "../sp42-types" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
