[package]
name = "sp42-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
rmcp = { version = "2.0.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
serde.workspace = true
serde_json.workspace = true
sp42-core = { path = "../sp42-core" }
sp42-inference = { path = "../sp42-inference" }
sp42-types = { path = "../sp42-types" }
tokio = { workspace = true, features = ["io-std", "rt-multi-thread", "macros"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
