[package]
name = "sp42-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
rmcp = { version = "2.0.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
serde.workspace = true
serde_json.workspace = true
sp42-citation = { path = "../sp42-citation" }
sp42-fetch = { path = "../sp42-fetch" }
sp42-inference = { path = "../sp42-inference" }
sp42-parsoid = { path = "../sp42-parsoid" }
sp42-platform = { path = "../sp42-platform" }
sp42-types = { path = "../sp42-types" }
sp42-wiki = { path = "../sp42-wiki" }
tokio = { workspace = true, features = ["io-std", "rt-multi-thread", "macros"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
