[package]
name = "sp42-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# Exposes `test_fixtures` to other workspace crates' test builds. Used by
# sp42-core's domain tests during the platform/domain migration (ADR-0013).
test-support = []

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
futures.workspace = true
regex = "1.12"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
similar.workspace = true
sp42-types = { path = "../sp42-types" }
thiserror.workspace = true
tracing.workspace = true
unicode-normalization = "0.1"
url.workspace = true

[dev-dependencies]
proptest = "1.9.0"
