[package]
name = "sp42-reporting"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
sp42-core = { path = "../sp42-core" }

[dev-dependencies]
proptest = "1.9.0"
serde_json.workspace = true
