[package]
name = "sp42-reporting"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
sp42-coordination = { path = "../sp42-coordination" }
sp42-platform = { path = "../sp42-platform" }
sp42-live = { path = "../sp42-live" }

[dev-dependencies]
proptest = "1.9.0"
serde_json.workspace = true
sp42-wiki = { path = "../sp42-wiki", features = ["test-fixtures"] }
url.workspace = true
