[package]
name = "sp42-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
futures.workspace = true
parsoid.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sp42-coordination = { path = "../sp42-coordination" }
sp42-core = { path = "../sp42-core" }
sp42-fetch = { path = "../sp42-fetch" }
sp42-inference = { path = "../sp42-inference" }
sp42-live = { path = "../sp42-live" }
sp42-patrol = { path = "../sp42-patrol" }
sp42-reporting = { path = "../sp42-reporting" }
sp42-types = { path = "../sp42-types" }
sp42-wiki = { path = "../sp42-wiki" }
tokio.workspace = true
tower-http = { workspace = true, features = ["cors", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
tokio-tungstenite = "0.28.0"
tower.workspace = true
