[package]
name = "sp42-wiki"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
sp42-core = { path = "../sp42-core" }
thiserror.workspace = true
url.workspace = true
