[package]
name = "sp42-desktop-tauri"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"
publish = false

[workspace]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sp42-core = { path = "../../sp42-core" }

[profile.release]
codegen-units = 1
debug = 0
incremental = false
lto = "thin"
strip = "debuginfo"

[profile.ci]
inherits = "dev"
codegen-units = 64
debug = 0
incremental = false
