[package]
name = "sp42-desktop-tauri"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
rust-version = "1.96"
publish = false

[workspace]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sp42-core = { path = "../../sp42-core" }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-shell = "2.3.5"

[profile.release]
codegen-units = 1
debug = 0
incremental = false
lto = "thin"
strip = "debuginfo"

[profile.ci]
inherits = "dev"
codegen-units = 64
debug = 0
incremental = false
